--- a/app/src/main/res/drawable/ic_email.xml
+++ b/app/src/main/res/drawable/ic_email.xml
@@ -1,10 +1,10 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="24dp"
-    android:height="24dp"
+    android:tint="#000000"
+    android:viewportHeight="24"
     android:viewportWidth="24"
-    android:viewportHeight="24">
-  <path
-      android:pathData="M20,4a2,2 0,0 1,2 2v12a2,2 0,0 1,-2 2L4,20a2,2 0,0 1,-2 -2v-1h2v1h16L20,7.423l-6.935,6.935a1.5,1.5 0,0 1,-2.121 0L4,7.414L4,8L2,8L2,6a2,2 0,0 1,2 -2h16ZM6,13a1,1 0,0 1,0.117 1.993L6,15L1,15a1,1 0,0 1,-0.117 -1.993L1,13h5ZM5,10a1,1 0,1 1,0 2L2,12a1,1 0,1 1,0 -2h3Z"
-      android:fillColor="#FF09244B"
-      android:fillType="nonZero"/>
+    android:height="24dp"
+    android:width="24dp">
+      
+    <path android:fillColor="@android:color/white" android:pathData="M20,4L4,4c-1.1,0 -1.99,0.9 -1.99,2L2,18c0,1.1 0.9,2 2,2h16c1.1,0 2,-0.9 2,-2L22,6c0,-1.1 -0.9,-2 -2,-2zM20,8l-8,5 -8,-5L4,6l8,5 8,-5v2z"/>
+    
 </vector>
