--- a/app/src/main/res/layout/item_email.xml
+++ b/app/src/main/res/layout/item_email.xml
@@ -13,52 +13,61 @@
         android:id="@+id/authorMail"
         android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <LinearLayout
-            android:orientation="horizontal"
-            android:padding="3dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-            <ImageView
-                android:padding="2dp"
-                app:tint="@color/black"
-                android:src="@drawable/ic_email"
-                android:layout_marginStart="5dp"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:importantForAccessibility="no" />
-            <TextView
-                android:text="Email"
-                android:layout_marginStart="10dp"
-                android:textSize="14sp"
-                android:textStyle="bold"
-                android:layout_gravity="center"
-                android:textColor="@color/black"
+        android:layout_height="wrap_content"
+        android:padding="12dp">
+
+
+        <TextView
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content"
+                android:text="Email"
+                android:textStyle="bold"
+                android:textSize="18sp"
+                android:layout_marginBottom="5dp"
+                android:textColor="@color/black"/>
+
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <ImageView
+                    app:tint="@color/black"
+                    android:padding="2dp"
+                    android:layout_marginStart="10dp"
+                    android:src="@drawable/ic_email"
+                    android:layout_width="25dp"
+                    android:layout_height="25dp"
+                    android:importantForAccessibility="no" />
+                <LinearLayout
+                    android:orientation="vertical"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+                    <TextView
+                        android:text="Tanim494@gmail.com"
+                        android:textSize="17sp"
+                        android:textColor="@color/black"
+                        android:textStyle="bold"
+                        android:gravity="center"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"/>
+
+
+                    <TextView
+                        android:id="@+id/requestButton"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Request Feature"
+                        android:textColor="@color/black"
+                        android:textStyle="bold"
+                        android:background="@drawable/rounded_button"
+                        android:padding="10dp"
+                        android:layout_marginBottom="10dp"
+                        android:layout_gravity="center"/>
+
+                </LinearLayout>
+
+            </LinearLayout>
 
         </LinearLayout>
-        <TextView
-            android:text="Tanim494@gmail.com"
-            android:textStyle="bold"
-            android:textColor="@color/black"
-            android:textSize="18sp"
-            android:layout_marginStart="25dp"
-            android:layout_marginBottom="15dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
-        <TextView
-            android:id="@+id/requestButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Request Feature"
-            android:textColor="@color/black"
-            android:textStyle="bold"
-            android:background="@drawable/rounded_button"
-            android:padding="10dp"
-            android:layout_marginBottom="10dp"
-            android:layout_gravity="center"/>
-
-    </LinearLayout>
 
 </androidx.cardview.widget.CardView>
