--- a/app/src/main/res/menu/bottom_navigation.xml
+++ b/app/src/main/res/menu/bottom_navigation.xml
@@ -3,7 +3,7 @@
     <item
         android:id="@+id/nv_home"
         android:title="Home"
-        android:icon="@drawable/nv_home" />
+        android:icon="@drawable/ic_home" />
     <item
         android:id="@+id/nv_faculty"
         android:title="Faculties"
@@ -14,6 +14,6 @@
         android:icon="@drawable/nv_resource" />
     <item
         android:id="@+id/nv_author"
-        android:title="Author"
-        android:icon="@drawable/nv_author" />
+        android:title="Developer"
+        android:icon="@drawable/nv_developer" />
 </menu>
